<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.client.ui.home.HomeFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.client.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_matches"
        android:name="com.example.client.ui.matches.MatchesFragment"
        android:label="@string/menu_matches"
        tools:layout="@layout/fragment_matches" />

    <fragment
        android:id="@+id/nav_messages"
        android:name="com.example.client.ui.messages.MessagesFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.client.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_conversation_detail"
        android:name="com.example.client.ui.messages.ConversationDetailFragment"
        android:label="Conversation"
        tools:layout="@layout/fragment_conversation_detail">
        <argument
            android:name="username"
            app:argType="string" />
        <argument
            android:name="displayName"
            app:argType="string"
            app:nullable="true" />
    </fragment>
</navigation>